#83 - Fix Alignment of Icons and Description (#95)

--- a/src/theme/css/frontend/donate-page/_audit.scss
+++ b/src/theme/css/frontend/donate-page/_audit.scss
@@ -25,14 +25,6 @@
 
   &--card {
 
-	& > .audit--card__item {
-	  display: none;
-
-	  @screen lg {
-		display: block;
-	  }
-	}
-
 	img {
 	  @apply mb-px42 mx-auto;
 	  display: block;
